# GlitchMixer

./: .gitignore  ImageEditor.bak.tsx  README.md  build.sh  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
glitch-wasm/: Cargo.toml
glitch-wasm/src/: lib.rs
src/: App.css  App.tsx  index.css  main.tsx  types.d.ts
src/components/: CorruptionControls.tsx  EffectControls.tsx  ExportControls.tsx  ImageEditor.tsx  ImageEditorWrapper.tsx  ImageUpload.tsx  PresetManager.tsx  ShaderControls.tsx  ShaderControls.tsx.bak  ShaderLayerControls.tsx  ShaderPresets.tsx
src/hooks/: useAnimatedEffects.ts  useAnimatedGif.ts  useAudioAnalyzer.ts  useEffectPresets.ts  useGifRecorder.ts  useGlitchEffect.ts  useImageBlender.ts  useShaderEffect.ts  useVideoExport.ts
